# raytracer

./: .gitignore  Cargo.toml
scenes/: book2.ron  book_cover.ron  bvh_test.ron  checker_mirror.ron  cornell.ron  emissive.ron  globe.ron  material_demo.ron  medium_demo.ron  motion_blur.ron  perlin.ron  refraction.ron
src/: camera.rs  config.rs  interpolate.rs  loader.rs  main.rs
src/geom/: aabb.rs  axis.rs  mod.rs  point_cloud.rs  ray.rs  vec3.rs
src/hittable/: bvh.rs  constant_medium.rs  cuboid.rs  hittable_list.rs  instance.rs  mod.rs  moving_sphere.rs  rect.rs  sphere.rs
src/material/: dielectric.rs  emissive.rs  lambertian.rs  metal.rs  mod.rs
src/scene/: desc.rs  loader.rs  mod.rs
src/scenes/: book_cover.rs  material_demo.rs  mod.rs
src/texture/: checkerboard.rs  image.rs  isotropic.rs  mod.rs  perlin.rs  solid_color.rs
